<resources xmlns:tools="http://schemas.android.com/tools" >
    <string name="app_name">Dril</string>
    <string name="app_name_long">Dril - English effectively</string>
    <string name="dashboard">Dashboard</string>
    <string name="btn_start">Start dril</string>
    <string name="btn_book">Textbooks</string>
    <string name="btn_stats">Statistics</string>
    <string name="btn_info">Helper</string>
    <string name="question">Question:</string>
    <string name="answer">Answer:</string>
    <string name="btn_1">Knew it!</string>
    <string name="btn_3">Not yet</string>
    <string name="btn_5">Don\'t know</string>
    <string name="showAnswerBtn">Get an answer</string>
    <string name="zero_cards_alert">There are no cards activated</string>
    <string name="book_add">Add textbook</string>
    <string name="book_add_head">Add your own textbook</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="deleted">Successfully deleted</string>
    <string name="book_not_deleted">The textbook could not be deleted</string>
    <string name="no_book_available">There are not textbooks</string>
    <string name="title">Write name</string>
    <string name="error_ocurred">Some error occurred!</string>
    <string name="successfully_added">Successfully added</string>
    <string name="lecture_count">lessons: %1$d / cards: %2$d / activated: %3$d</string>
    <string name="word_count">Count of cards: %1$d activated: %2$d</string>
    <string name="book_edit_head">Edit textbook</string>
    <string name="submit">Save</string>
	<string name="cancel">Cancel</string>
	<string name="saved_ok">Successfully saved</string>
	<string name="saved_no">Changes could not be saved</string>
	<string name="no_lecture_available">Textbook is empty</string>
	<string name="lecture">Lessons</string>
	<string name="options">Options</string>
	<string name="deactive_lecture">Deactivate lesson</string>
	<string name="deactive_all">Deactive all</string>
	<string name="deactive">Deactivate</string>
	<string name="active">Activate</string>
	<string name="active_lecture">Activate lesson</string>
	<string name="active_all">Active all</string>
	<string name="active_ten">Activate 10 cards randomly</string>
    <string name="lecture_add_head">Add lesson</string>
    <string name="lecture_edit_head">Rename lesson</string>
	<string name="lecture_not_deleted">Deleting of lesson failed</string>
	<string name="word_add_label">Add card to:</string>
	<string name="word_added">Card was successfully added</string>
	<string name="no_word_available">Lesson is empty</string>
	<string name="word_edit_label">Edit card</string>
	<string name="word_active">Card activated</string>
	<string name="word_deactive">Card is deactivated</string>
	<string name="words_deactived">Deactevated</string>
	<string name="error">Some error occurred, try it again</string>
	<string name="selected">Selected:</string>
	<string name="wordAction">Card:</string>
	<string name="activated_words">Cards: %1$d  |  viewed: %2$dx |  last rating: %3$s</string>
	<string name="dril_finished">Great! You\'ve learned %1$d new word(s).</string>
	<string name="pronauce_question">speech question</string>
	<string name="pronauce_answer">speech answer</string>
	<string name="speach_failed">Could not be pronounced given expression!</string>
	<string name="nothing_to_speeach">Nothing to pronounce</string>
	<string name="word_not_selected">No card selected</string>
    <string name="menu_about">About app</string>
    <string name="copy">Copyright &#169; 2012 Peter Jurkovič</string>
    <string name="version">Version </string>
    <string name="pageLink">www.peterjurkovic.com</string>
    <string name="fb">Facebook page</string>
    <string name="email">email</string>
    <string name="send_email">Send email to author</string>
    <string name="activated">Activated</string>
    <string name="table_book_count">Count of textbooks:</string>
    <string name="table_lecture_count">Count of lessons:</string>
    <string name="table_word_count">Count of cards:</string>
    <string name="table_book_active_count">Count of activated cards:</string>
    <string name="table_avg_rate">Your average rate:</string>
    <string name="table_finished">Number of learned cards:</string>
    <string name="stats_fully">General statistics</string>
    <string name="stats_reset">Delete stats</string>
    <string name="dril_avg">Average rating</string>
    <string name="error_no_data">Can not load data</string>
	<string name="loading">Loading, please wait &#8230;</string>
	<string name="import_words">Import words</string>
	<string name="what_is_csv">What is CSV file?</string>
	<string name="csv_label">CSV is a delimited text file that uses a comma to separate values. More sophisticated CSV implementations (And this app too!) permit them, often by requiring \" (double quote) characters around values that contain reserved characters.</string>
    <string name="how_it_create">How can I create it?</string>
	<string name="csv_create">Every common application has the opportunity export date to CSV format, e.g. MS Excel, Open office calc, LibreOffice etc. \n\nSo you can simply write yours words in Excel, export them to CSV, than copy into your mobile phone\'s storage and import.</string>
    <string name="csv_format">CSV format for this application</string>
    <string name="csv_format_label">This app support basic csv foramt, that is:\n\n \"word\",\"translation\"\n\"second word\",\"and his translation\"\n\n NOTE: This app dont use any heading of csv</string>
    <string name="csv_choose">Click to choose file</string>
    <string name="import_status">Import status</string>
    <string name="import_failed">import failed, check your csv format.</string>
    <string name="import_success">Successfully imported!\nCount of new words: %1$d</string>
    <string name="import_via_csv">Import via CSV file</string>
    <string name="import_via_csv_descr">Choose your CSV file from devices storage</string>
    <string name="import_via_xls">Import via Excel file</string>
    <string name="import_via_xls_descr">Choose your XLS file from devices storage</string>
    <string name="import_via_id">Import via drilapp.com</string>
    <string name="import_via_id_descr">Insert your generated import ID from drilapp.com page.</string>
    <string name="import_id">Import ID</string>
    <string name="import_id_put">Put your import ID here:</string>
    <string name="import_submit">Download and save</string>
    <string name="id_head">What is import ID?</string>
    <string name="id_descr">Thought site www.drilapp.com you can easily write your own words. After saving you will get identifier (Import ID), which when you put here, the words will be automatically downloaded into this device. \n\nMore info at www.drilapp.com</string>
    <string name="import_id_failed">Import failed, try it again later.</string>
    <string name="import_id_not_found">Not found. Is your import ID correct?</string>
    <string name="import_id_invalid">Invalid import ID.</string>
    <string name="import_info_head">Import your own words</string>
    <string name="import_info_desc">Visit a new WebDril avaiable on web.drilapp.com</string>
    <string name="about_app">About</string>
    <string name="app_descr">Dril application is created for learning English words and phrases. Dril is based on the method of repetition, it is an effective way of memorizing e.g. words, or other information for the lern. Should not be activated more than 30 cards.</string>
    <string name="info_btn_head">What does the buttons means?</string>
    <string name="ibtn1">1. - I knew it immediately, the card is no longer displayed in the dril.</string>
    <string name="ibtn2">2. - I knew it, but I had to think a moment, the card will in the dril again.</string>
    <string name="ibtn3">3. - I knew it with some little error. The card will be displayed again.</string>
    <string name="ibtn4">4. - I did not know it, but somewhere I saw / heard! The card will be displayed again.</string>
    <string name="ibtn5">5. - I\'v never seen before, that was actually the first I have ever seen this word/phrase.</string>
	<string name="how_its_work">How it\'s work?</string>
	<string name="how_its_work_descr">At the first, you must choose in the section \"Textbooks\" cards that you want to learn. This can be done in two ways. Long click on the lesson, then in the pop-up menu, select \"Activate 10 cards randomly\", or individually select and activate some cards. </string>
	<string name="update">Update textbooks</string>
	<string name="update_textbooks">Update textbooks</string>
	<string name="update_status">Update status</string>
	<string name="up_to_date">Your textbooks are up to date</string>
	<string name="update_failed">Update failed, please check your network connection</string>
	<string name="update_available">New textbooks available! \nDo you want download it?</string>
	<string name="please_wait">Please wait &#8230;</string>
	<string name="loading_check">Checking, please wait&#8230;</string>
	<string name="loading_down">Downloading, please wait &#8230;</string>
	<string name="successfully_updated">Successfully updated! \nCount of new textbooks: %1$d</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="ok">OK</string>
	<string name="drilapp">web.drilapp.com</string>
	<string name="drilapp_ow">web.drilapp.com\n your own words</string>
	<string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>
    <string name="skip_button_label">Skip</string>
	<string name="label_lang_sk">Slovak</string>
	<string name="label_lang_de">German</string>
	<string name="label_lang_fr">French</string>
	<string name="label_lang_es">Spanich</string>
	<string name="label_lang_en">English</string>
	<string name="label_lang_cs">Czech</string>
	<string name="label_lang_sv">Swedish</string>
	<string name="label_lang_fi">Finnish</string>
	<string name="label_lang_eo">Esperanto</string>
	<string name="label_lang_da">Danish</string>
	<string name="label_lang_el">Greek</string>
	<string name="label_lang_hr">Croatian</string>
	<string name="label_lang_it">Italian</string>
	<string name="label_lang_nl">Dutch</string>
	<string name="label_lang_pl">Polish</string>
	<string name="label_lang_sl">Slovenian</string>
	<string name="label_lang_pt">Portuguese</string>
	<string name="pref_label_test">Strategy</string>
	<string name="pref_label_test_descr">Swap question and answer</string>
	<string name="pref_label_test_descr_dialog">What should be tested</string>
	<string name="pref_label_test_question">Question</string>
	<string name="pref_label_test_answer">Answer</string>
	<string name="pref_label_test_rand">Random</string>
	<string name="pref_input_answer">Inscribe answer</string>
	<string name="pref_input_answer_descr">Will determine the question similarity</string>
	<string name="pref_show_helper">Show whisperer</string>
	<string name="pref_show_helper_descr">on the dril sreen</string>
	<string name="pref_first_name">Your first name</string>
	<string name="pref_last_name">Your last name</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_settings">Settings</string>
    <string name="add_word">Add card</string>
    <string name="donate">Donation</string>
    <string name="backupPath">Process back up</string>
    <string name="backupLocation">Backup file location:</string>
    <string name="restoreAlert">Alert: All your data stored in this application, will be permanently removed!</string>
	<string name="backupRestoreH1">Data backup/restore</string>
	<string name="backupRestoreDescr">The application provides the ability to backup and restore data. NOTE: Please do not change the generated file name. The format has always to be: yyyyMdd_d.dril \n\n Click here for more information</string>
</resources>