<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    >
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/repeat" >

  
    <LinearLayout 
        android:id="@+id/info1"
        style="@style/infoWrapper" >
		    <TextView 
		        style="@style/infoH1"
		        android:text="@string/about_app" />
		    
		     <TextView 
		        style="@style/infoTextDescr"
		        android:text="@string/app_descr" />
    </LinearLayout>
    
    
    <LinearLayout 
        android:id="@+id/info2"
        android:layout_below="@id/info1"
		style="@style/infoWrapper" >
		    <TextView 
		        style="@style/infoH1"
		        android:text="@string/how_its_work"/>
		    
		     <TextView 
		        style="@style/infoTextDescr"
		        android:text="@string/how_its_work_descr"/>
    </LinearLayout>
    
    
    
    <TableLayout 
        android:layout_below="@id/info2"
        android:id="@+id/infoTable"
        style="@style/infoWrapper" >
       
       <TextView 
		        style="@style/infoH1"
		        android:layout_marginBottom="15dp"
		        android:text="@string/info_btn_head"
		        />
	    <TableRow android:layout_marginBottom="10dp" >
	         <Button
	            style="@style/infoBtn"
	            android:background="@drawable/btn_1" 
	            android:text="@string/btn_1" />
	        
        	<TextView 
        	    style="@style/infoBtnLable"
        		android:text="@string/ibtn1" />
	    </TableRow>
	    
	     <TableRow android:layout_marginBottom="10dp" >
	        <Button
	            style="@style/infoBtn"
	            android:background="@drawable/btn_2" 
	            android:text="@string/btn_2" />
	        
        	<TextView 
        	    style="@style/infoBtnLable"
        		android:text="@string/ibtn2" />
	    </TableRow>
	    
	     <TableRow android:layout_marginBottom="10dp" >
	         <Button
	            style="@style/infoBtn"
	            android:background="@drawable/btn_3" 
	            android:text="@string/btn_3" />
	        
        	<TextView 
        	    style="@style/infoBtnLable"
        		android:text="@string/ibtn3" />
	    </TableRow>
	    
	     <TableRow android:layout_marginBottom="10dp" >
	         <Button
	            style="@style/infoBtn"
	            android:background="@drawable/btn_4" 
	            android:text="@string/btn_4" />
	        
        	<TextView 
        	    style="@style/infoBtnLable"
        		android:text="@string/ibtn4" />
	    </TableRow>
	    
	      <TableRow>
	         <Button
	            style="@style/infoBtn"
	            android:background="@drawable/btn_5" 
	            android:text="@string/btn_5" />
	        
        	<TextView 
        	    style="@style/infoBtnLable"
        		android:text="@string/ibtn5" />
	    </TableRow>
    </TableLayout>
    
    <LinearLayout 
        	android:layout_below="@id/infoTable"
			style="@style/infoWrapper" >
		    <TextView 
		        style="@style/infoH1"
		        android:text="@string/import_info_head"/>
		    
		     <TextView 
		        style="@style/infoTextDescr"
		        android:text="@string/import_info_desc"/>
    	</LinearLayout>
</RelativeLayout>
</ScrollView>
