<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

	<TextView style="@style/separator" 	/>	  
    
	 <TextView
        android:id="@+id/inportLectureLabel"
        style="@style/boxLabel"
        android:text="@string/lecture_add_head"
        android:visibility="gone"
 		/>
	
    <EditText
        android:id="@+id/importLectureName"
        style="@style/editText"
        android:background="@drawable/input"
        android:hint="@string/title"
        android:visibility="gone"
        android:lines="1" />
	
	<Button 
	    android:id="@+id/importBtn"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="25dp"
	    android:paddingTop="20dp"
	    android:paddingBottom="20dp"
	    style="@style/v2Submitbutton"  
	    android:textStyle="bold" 
	    android:text="@string/csv_choose"
	    />
	

			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content">
		
				<LinearLayout 
					style="@style/infoWrapper" >
					    <TextView 
					        style="@style/infoH1"
					        android:text="@string/what_is_csv"/>
					    
					     <TextView 
					        style="@style/infoTextDescr"
					        android:text="@string/csv_label"/>
			    </LinearLayout>
			    
				<LinearLayout 
					style="@style/infoWrapper" >
					    <TextView 
					        style="@style/infoH1"
					        android:text="@string/how_it_create"/>
					    
					     <TextView 
					        style="@style/infoTextDescr"
					        android:text="@string/csv_create"/>
			    </LinearLayout>
			    
				<LinearLayout 
					style="@style/infoWrapper" >
					    <TextView 
					        style="@style/infoH1"
					        android:text="@string/csv_format"/>
					    
					     <TextView 
					        style="@style/infoTextDescr"
					        android:text="@string/csv_format_label"/>
			    </LinearLayout>
		    </LinearLayout>
	</LinearLayout>
</ScrollView>
