<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeat"
    android:fillViewport="true" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        layout="@layout/actionbar_layout" />
	
    <FrameLayout
	    android:id="@+id/lectureListnav"
        android:layout_width="fill_parent"
        android:layout_below="@id/layoutHeader"
        android:layout_height="35dp"
        android:background="#DEDEDE" >

        <TextView
            android:id="@+id/importLectureName"
            style="@style/ListLabel" />
    </FrameLayout>
    
    
	<Button 
	    android:id="@+id/importBtn"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:text="@string/csv_choose"
	    />
	
	
	<LinearLayout 
		style="@style/infoWrapper" >
		    <TextView 
		        style="@style/infoH1"
		        android:text="@string/what_is_csv"/>
		    
		     <TextView 
		        style="@style/infoTextDescr"
		        android:text="@string/csv_label"/>
    </LinearLayout>
    
	<LinearLayout 
		style="@style/infoWrapper" >
		    <TextView 
		        style="@style/infoH1"
		        android:text="@string/how_it_create"/>
		    
		     <TextView 
		        style="@style/infoTextDescr"
		        android:text="@string/csv_create"/>
    </LinearLayout>
    
	<LinearLayout 
		style="@style/infoWrapper" >
		    <TextView 
		        style="@style/infoH1"
		        android:text="@string/csv_format"/>
		    
		     <TextView 
		        style="@style/infoTextDescr"
		        android:text="@string/csv_format_label"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>
