<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
      xmlns:dril="http://schemas.android.com/apk/res-auto" >
   
    <item 
        android:id="@+id/menuAddWord"
        android:orderInCategory="90"
        android:icon="@drawable/ic_action_new"
        android:title="@string/add_word"
    />
    
    <item 
        android:id="@+id/menuActivateLecture"
        android:orderInCategory="91"
        android:icon="@drawable/ic_action_active"
        android:title="@string/active_all"
    />
    
    <item 
        android:id="@+id/menuDeactivateLecture"
        android:orderInCategory="92"
        android:icon="@drawable/ic_action_deactive"
        android:title="@string/deactive_all"
    />
    
    <item 
        android:id="@+id/menuImport"
        android:orderInCategory="93"
        android:title="@string/import_words"
    />

</menu>
