<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

	<TextView style="@style/separator" 	/>	  
    
	<TextView 
	    android:id="@+id/restoreAlert"
		android:visibility="gone"
		style="@style/V2EraseAlert"
	    android:text="@string/restoreAlert"
	/>
	
			
	<Button 
	    android:id="@+id/restoreBackupBtn"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="25dp"
	    android:paddingTop="20dp"
	    android:paddingBottom="20dp"
	    style="@style/v2Submitbutton"  
	    android:textStyle="bold" 
	    android:text="@string/backupPath"
	/>
	
	<TextView 
	    android:id="@+id/backupFileLocationLabel"
	    style="@style/boxLabel"
	    android:text="@string/backupLocation"
	    android:visibility="gone"
	    />
	
	<TextView 
	    android:id="@+id/backupFileLocation"
	    style="@style/infoWrapper"
	    android:visibility="gone"
	    />
	
	  <LinearLayout 
	      	android:id="@+id/backupRestoreHelp"
			style="@style/infoWrapper" >
		    <TextView 
		        style="@style/infoH1"
		        android:text="@string/backupRestoreH1"/>
		    
		     <TextView 
		        style="@style/infoTextDescr"
		        android:text="@string/backupRestoreDescr"/>
    	</LinearLayout>
	
	 
</LinearLayout>

