<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

	<TextView style="@style/separator" 	/>
    
    <TextView 
        style="@style/boxLabel"
        android:text="@string/import_id_put"
        />
    
     <EditText
	        android:id="@+id/importIdInput"
	        style="@style/editText"
	        android:background="@drawable/input"
	        android:inputType="number"
	        android:hint="@string/import_id"
	        android:lines="1" />
    
	<Button 
	    android:id="@+id/importBtn"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="25dp"
	    android:paddingTop="20dp"
	    android:paddingBottom="20dp"
	    style="@style/v2Submitbutton"  
	    android:textStyle="bold" 
	    android:gravity="center"
	    android:text="@string/import_submit"
	    />
	
	
	<LinearLayout 
	    android:id="@+id/importInfo"
		style="@style/infoWrapper" >
		    <TextView 
		        style="@style/infoH1"
		        android:text="@string/id_head"/>
		    
		     <TextView 
		        style="@style/infoTextDescr"
		        android:text="@string/id_descr"/>
    </LinearLayout>
    
	
</LinearLayout>
</ScrollView>
