<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/repeat"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<include 
	    android:layout_alignParentTop="true"
	    layout="@layout/actionbar_layout" /> 
    
	 <View
        android:id="@+id/shaddowLectureAdd"
        android:layout_width="match_parent"
        android:layout_height="5sp"
        android:layout_below="@id/layoutHeader"
        android:background="@drawable/drop_shaddow2"  />
	 
	 
	    <TextView
	        android:id="@+id/boxLabelLecture"
	        style="@style/boxLabel"
	        android:text="@string/lecture_add_head"
	        android:layout_below="@id/shaddowLectureAdd"
	 		/>
	
	    <EditText
	        android:id="@+id/addLectureName"
	        android:layout_below="@id/boxLabelLecture"
	        style="@style/editText"
	        android:background="@drawable/input"
	        android:hint="@string/title"
	        android:lines="1" />
	    
	      
	    <Button
	        android:id="@+id/submitAddLecture"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@id/addLectureName"
	        android:text="@string/submit" />
	    
	     <Button
	        android:id="@+id/cancelAddLecture"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/addLectureName"
	        android:layout_toLeftOf="@id/submitAddLecture"
	        android:text="@string/cancel" />
	     
	     <LinearLayout 
	       	android:layout_below="@id/cancelAddLecture"
			style="@style/infoWrapper" >
		    <TextView 
		        style="@style/infoH1"
		        android:text="@string/import_info_head"/>
		    
		     <TextView 
		        style="@style/infoTextDescr"
		        android:text="@string/import_info_desc"/>
    	</LinearLayout>
		
</RelativeLayout>