<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"  >

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	
	    <TextView style="@style/separator" 	/>	
	    
	   <LinearLayout
	       android:id="@+id/importViaCsv"
	       style="@style/v2importMenu"
	       android:background="@drawable/v2_import_csv" >
			    
			     <TextView
			        style="@style/v2importHead"
			        android:text="@string/import_via_csv" />
			     
			     <TextView
			         style="@style/v2importDscr"
			         android:text="@string/import_via_csv_descr" />
	
	    </LinearLayout>
    
   
   
   <LinearLayout
       android:id="@+id/importViaId"
       style="@style/v2importMenu"
       android:background="@drawable/v2_imprt_importid" >
		    
		    <TextView
		        style="@style/v2importHead"
		        android:text="@string/import_via_id" />
		     
		     <TextView
		         style="@style/v2importDscr"
		         android:text="@string/import_via_id_descr" />

    </LinearLayout>
    
</LinearLayout>
</ScrollView>
