<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	 <TextView style="@style/separator" />
    
	 <TextView
	        android:id="@+id/boxLabelLecture"
	        style="@style/boxLabel"
	        android:layout_marginTop="10dp"
	        android:text="@string/lecture_add_head"
	 		/>
	
	    <EditText
	        android:id="@+id/addLectureName"
	        android:layout_below="@id/boxLabelLecture"
	        style="@style/editText"
	        android:background="@drawable/input"
	        android:hint="@string/title"
	        android:lines="1" />
	    
	    
	     <LinearLayout
		     android:layout_below="@+id/addLectureName"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:orientation="horizontal"
			 android:weightSum="1.0" >
	    
		    <Button
		        android:id="@+id/cancelAddLecture"
		        style="@style/v2Cancelbutton"
     			android:text="@string/cancel" />
		    
		    <Button
		        android:id="@+id/submitAddLecture"
		      	style="@style/v2Submitbutton"     
          		android:text="@string/submit"   
          	/>
	      </LinearLayout>
	    	
	      <include  layout="@layout/v2_include_dril_promo"/>
		
</RelativeLayout>